# Sources for proxy

module_DATA = \
  modules/Proxy.rb

client_DATA = \
  clients/proxy_auto.rb \
  clients/proxy_proposal.rb \
  clients/proxy.rb

yncludedir = @yncludedir@/proxy
ynclude_DATA = \
  include/proxy/dialogs.rb

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA)

include $(top_srcdir)/Makefile.am.common